# service_program

./: .gitignore  README.md  Vagrantfile  docker-compose.yml  playbook.yml  sp_kubernetes.yaml
doc/: README.md  customer_api.md  database.md  machine_api.md  readme.md  structure.drawio  webview.md
doc/images/: structure.drawio
docker/customer_api/: Dockerfile
docker/machine_api/: Dockerfile
docker/postgres/: Dockerfile
kubernetes/: customer_kubernetes.yaml  database_kubernetes.yaml  machine_kubernetes.yaml  reset.sh  setup.sh  sp_kubernetes.yaml  webview_kubernetes.yaml
src/customer_api/: Cargo.toml  Dockerfile  Makefile  customer  diesel.toml
src/customer_api/migrations/2025-09-21-162721-0000_customer_table/: down.sql  up.sql
src/customer_api/src/: database.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/database/: Dockerfile
src/database/customer_db/: tables.sql
src/database/machine_db/: tables.sql
src/database/scripts/: init_customer_database.sh  init_machine_database.sh
src/machine_api/: Cargo.toml  Dockerfile  diesel.toml
src/machine_api/migrations/2025-09-22-131936-0000_machine_table/: down.sql  up.sql
src/machine_api/src/: database.rs  handlers.rs  main.rs  models.rs  routes.rs  schema.rs
src/webview/: Caddyfile  Dockerfile
src/webview/www/: about.html  customers.html  index.html  machines.html
src/webview/www/scripts/: add_customer.js  create_card.js  customer_machine_content.js  customer_management.js  customer_page.js  customers.js  machine_management.js  machine_page.js  url_handler.js
(+5 files in other folders)
