[package]
name = "machine_api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1.47.1", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde", "v4" ] }
chrono = { version = "0.4.42", features = ["serde"] }
